--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
-        "next": "14.0.4",
+        "next": "14.2.3",
         "next-auth": "^4.24.5",
         "next-themes": "^0.2.1",
+        "nextjs-toploader": "^1.6.12",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.49.2",
