--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.51.5",
     "remix-auth": "^3.6.0",
     "remix-auth-google": "^2.0.0",
+    "remix-themes": "^1.3.1",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
