Update start script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
+    "start": "npm run prisma:generate && npm run prisma:migrate:deploy && npm run create-superuser && remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev --name init",
